added divs to map return function to aid styling

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,9 @@ button {
 .component-heading {
     text-align: center;
 }
+
+.details,.experience,.education {
+    display: flex;
+    gap: 2px;
+
+}
