Overview component merged into App.js

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,14 @@ button {
     gap: 2px;
 
 }
+
+.App,.section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.section {
+    gap: 10px;
+}
