--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,23 @@
+@font-face {
+    font-family: Baufra;
+    src: url('./fonts/BaufraBold.ttf');
+}
+
+body {
+    margin: 0;
+}
+
 form {
     display: flex;
     gap: 10px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight:300;
+}
+h1,h2{
+    font-family: Baufra;
 }
 
 .form-item {
@@ -35,4 +49,14 @@ button {
 
 .section {
     gap: 10px;
+    margin-top: 30px;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    position:fixed;
+    bottom: 0;
+    width: 100vw;
+    text-align: center;
 }
