--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,19 @@ form {
 h1,h2{
     font-family: Baufra;
 }
+h1 {
+    background-color: black;
+    color: white;
+    width: 100%;
+    padding: 2px;
+    margin-top: 0px;
+    margin-bottom: 0;
+    text-align: center;
+}
+h2 {
+    margin-bottom: 2px;
+    color: #d92121;
+}
 
 .form-item {
     display: flex;
@@ -40,6 +53,14 @@ button {
 
 }
 
+#general-section, #education-section, #experience-section {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2px;
+    justify-content: center;
+    align-items: center;
+}
+
 .App,.section {
     display: flex;
     flex-direction: column;
@@ -49,9 +70,48 @@ button {
 
 .section {
     gap: 10px;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
+.details, .education, .experience {
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
+
+.details {
+    margin: 2px;
+}
+#Name {
+    text-transform: uppercase;
+    font-size: 22px;
+    font-weight: bolder;
+}
+
+#Email {
+    margin-top: 0px;
+}
+.editbtn {
+    cursor: pointer;
+    background-image: url(./icons/edit.png);
+    background-color: white;
+  background-repeat: no-repeat;
+  /* background-position: 50% 50%;
+  put the height and width of your image here */
+  height: 18px;
+  width: 18px;
+  border: none;
+}
+
+.top {
+    margin-top: 0;
+}
+.bottom {
+    margin-bottom: 10px;
+}
+
+.titles {
+    font-weight: bolder;
+}
 footer {
     background-color: black;
     color: white;
